fixed overlap

--- a/styles/HeaderComponent.module.css
+++ b/styles/HeaderComponent.module.css
@@ -13,7 +13,7 @@
 
     nav.mainNav{
         position: fixed;
-        z-index: 2;
+        z-index: 1002;
         width: 100%;
         padding-left: 50px;
         flex-direction: column;
